fix alignment of article titles

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ img {
 
 .article-card__title {
   margin-top: 0.75rem;
+  text-align: left;
 }
 
 .article-card__text {
